# ADC-red-teaming-demo

./: .env.example  .gitignore  CLAUDE.md  README.md  adc_demo_redteam.py  provision.py  pyproject.toml  sanitize_runs.py  thoughts.md
agents/: clarabelle_attacker_instructions.txt  clarabelle_judge_prompt.txt  clarabelle_prompt.txt
data/redteam-runs/: ADC-Demo---Clarabelle-Goal-Hijacking_20260606_161537.json  ADC-Demo---Clarabelle-Goal-Hijacking_20260606_162101.json  ADC-Demo---Clarabelle-Goal-Hijacking_20260606_165005.json  ADC-Demo---Clarabelle-Goal-Hijacking_20260606_190842.json  ADC-Demo---Clarabelle-Goal-Hijacking_20260606_191000.json  ADC-Demo---Clarabelle-Goal-Hijacking_20260606_191633.json  ADC-Demo---Clarabelle-Goal-Hijacking_20260607_123646.json  ADC-Demo---Clarabelle-Goal-Hijacking_20260616_225858.json  ADC-smoke_20260606_160449.json  red-team_20260608_224502.json  red-team_20260609_191716.json
deck/: .gitignore  DEMO_RUNBOOK.md  deinline_assets.py  inline_assets.py  security-of-ai-agents.html
deck/assets/: clarabelle_result.json  clarabelle_transcript.json
hf-space/: Dockerfile  README.md  deploy_space.py
