[project]
name = "red-teaming-demo"
version = "0.1.0"
description = "Red-teaming AI agents demo for ADC (Amsterdam Data Conference)"
requires-python = ">=3.12"
dependencies = [
  "evaluatorq[orq,redteam]>=1.3.2",
  "rich>=13.9",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "orq-ai-sdk>=4.10.7",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"
